# gpu-server

./: Dockerfile  Dockerfile.dev  README.md  create_requirements.sh  docker_build.sh  entrypoint.sh  install-cuda-11.8.sh  install_cuda-12.sh  install_poetry.sh  install_venv.sh  plugin-cuda.yaml  pyproject.toml  requirements.txt  test_tensorflow.sh  test_torch.sh
