[tool.poetry]
authors = ["Coert van Gemeren <coert.vangemeren@hu.nl>"]
description = ""
name = "python-cuda-torch"
packages = []
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
cairosvg = "^2.7.0"
click = "^8.1.3"
ffmpeg-python = "^0.2.0"
ipykernel = "^6.23.1"
ipywidgets = "^8.0.6"
matplotlib = "^3.7.1"
natsort = "^8.3.1"
numpy = "^1.24.3"
opencv-contrib-python-headless = "^4.7.0.72"
orjson = "^3.8.10"
pandas = "^2.0.1"
pillow = "^9.5.0"
pre-commit = "^3.3.1"
progressbar = "^2.5"
python = ">=3.10,<3.11"
scikit-image = "^0.20.0"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"
pytesseract = "^0.3.10"
colour-science = "^0.4.2"
nltk = "^3.8.1"
albumentations = "^1.3.1"

[tool.poetry.group.torch.dependencies]
pytorch-lightning = "*"
segmentation-models-pytorch = "*"
tensorboard = "*"
torch = "*"
torch-tb-profiler = "*"
torchvision = "*"

[tool.poetry.group.google.dependencies]
google-api-python-client = "^2.86.0"
google-auth = "^2.17.3"
google-cloud-storage = "^2.8.0"
google-cloud-translate = "^3.11.1"
google-cloud-videointelligence = "^2.11.1"
google-cloud-vision = "^3.4.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coverage = "^7.2.3"
fakeredis = "^2.11.1"
flake8 = "^6.0.0"
mypy = "^1.2.0"
mypy-extensions = "^1.0.0"
pre-commit = "^3.2.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
types-futures = "^3.3.8"
types-orjson = "^3.6.2"
types-python-dateutil = "^2.8.19.12"
types-pytz = "^2023.3.0.0"
types-pyyaml = "^6.0.12.9"
types-requests = "^2.28.11.17"
types-toml = "^0.10.8.6"
typing-extensions = "^4.5.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/.pytest_cache",
  "**/docker",
  "**/lib",
  "**/kubernetes",
  "**/.mypy_cache",
]
include = ["app"]

reportMissingImports = true
reportMissingTypeStubs = false

pythonPlatform = "Linux"
pythonVersion = "3.10"
